# war-copilot

./: README.md  setup.cfg  setup.py
src/WarSim/: war-utils.py
