[metadata]
name = example-pkg-YOUR-USERNAME-HERE
version = 0.0.1
author = Christopher Gandrud
author_email = christopher.gandrud@gmail.com
description = Simulate outcomes for the game war. Written with the help of GitHub Copilot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/christophergandrud/war-copilot
project_urls =
    Bug Tracker = https://github.com/christophergandrud/war-copilot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: The Unlicense
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src